--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-environ = "*"
 django-extensions = "*"
 django-registration-redux = "*"
 whitenoise = "*"
+gunicorn = "*"
 
 [dev-packages]
 
