initial commit after redeplay

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ django-registration-redux = "*"
 whitenoise = "*"
 gunicorn = "*"
 psycopg2-binary = "*"
+django-choices = "*"
+django-multiselectfield = "*"
 
 [dev-packages]
 
